[package]
name = "anchor-nft"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_nft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
arrayref = "0.3.6"
mpl-token-metadata = "5.1.0"
mpl-utils = { version = "0.3", default-features = false }
mpl-core = { version = "0.8.0-alpha.2" }
solana-program = "~2.1.4"
spl-associated-token-account = { version = "6.0.0", features = [
    "no-entrypoint",
] }
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
mpl-core-candy-machine-core = "0.2.1"
curve25519-dalek = "4.1.3"
zeroize = "1.3.0"


[dev-dependencies]
env_logger = "0.11.5"
